<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2021  Ali Moukaled
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, either version 3 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/userInputET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        android:background="@drawable/message_input_background"
        android:elevation="1dp"
        android:hint="@string/send_message_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="3"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        tools:text="@string/test_message" />

    <ImageButton
        android:id="@+id/attachImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/send_button_background"
        android:contentDescription="@string/send"
        android:elevation="1dp"
        android:src="@drawable/ic_attach" />

    <ImageButton
        android:id="@+id/sendMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/send_button_background"
        android:contentDescription="@string/send"
        android:elevation="1dp"
        android:src="@drawable/ic_send" />

</LinearLayout>