<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2021  Ali Moukaled
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, either version 3 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
    -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/code_verification_fragment_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/verificationTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/enter_verification_code"
                android:textColor="?attr/colorPrimary"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:contentDescription="@string/code"
                android:src="@drawable/image_code_verification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verificationTitleTV" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_verification_hint"
                android:textAlignment="center"
                android:textColor="@color/grey800"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.43" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="18dp"
                android:text="@string/code"
                android:textColor="@color/grey800"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/codeETHolder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/codeETHolder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codeETHolder"
                style="@style/TextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:hint="@string/code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@id/guideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/resendCodeButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/resend_button_background"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/resend"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codeETHolder" />


            <Button
                android:id="@+id/submitCodeButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/verify"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>