<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2021  Ali Moukaled
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, either version 3 of the License, or
    * (at your option) any later version.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@drawable/participant_bubble_background"
        android:paddingHorizontal="5dp"
        android:paddingVertical="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="19dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="400dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="300dp">

            <ImageView
                android:id="@+id/imageMessageIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_message"
                tools:src="@drawable/image_phone_book" />

            <ProgressBar
                android:id="@+id/imageMessagePB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/downloadImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/download_button_background"
                android:contentDescription="@string/download"
                android:src="@drawable/ic_download"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/imageMessageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="19dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintWidth_max="300dp"
            tools:text="@string/test_message"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/messageTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="5dp"
            android:paddingBottom="2dp"
            android:textColor="@color/grey900"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="10:15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>